--- a/src/main/resources/messages/messages.properties
+++ b/src/main/resources/messages/messages.properties
@@ -3,6 +3,7 @@ required=is required
 notFound=has not been found
 duplicate=is already in use
 nonNumeric=must be all numeric
+notBlank=must not be blank
 duplicateFormSubmission=Duplicate form submission is not allowed
 typeMismatch.date=invalid date
 typeMismatch.birthDate=invalid date
